syntax = "proto3";

package eevee;

service eeveeService {
  rpc getTraficData(EmptyData) returns (stream BatchTraficData);
}

message BatchTraficData {
  repeated TraficData trafic = 1;
}

message TraficData {
  string id = 1;
  repeated string speed = 2;
  string timeInterval = 3;
  string date = 4;
}

message EmptyData {
}
